<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">&appName;</string>
    <string name="app_name_debug" translatable="false">&appName; (debug)</string>
    <string name="user_agent_app_name" translatable="false">&appName;Android</string>
    <string name="service_name">&appName; BackService</string>
    <string name="service_auto_start_description">&appName; foi iniciado automaticamente</string>
    <string name="service_description">Serviço requerido para chamadas em Backgroud</string>
    <string name="sync_account_name">&appName; contatos</string>
    <string name="about_link" translatable="false">https://www.vsphone.com.br</string>
    <string name="about_privacy_policy_link" translatable="false">https://www.vsphone.com.br</string>
    <string name="about_license_link" translatable="false">https://www.gnu.org/licenses/gpl-3.0.html</string>
    <string name="about_version" translatable="false">&appName; Android %s</string>
    <string name="about_liblinphone_sdk_version" translatable="false">&appName; SDK %s</string>
    <string name="about_privacy_policy">Visite nossa politica de Privacidade</string>
    <string name="about_text" translatable="false">GNU General Public License v3.0\n © 2022 Virtual Sistemas</string>
    <string name="about_weblate_link" translatable="false">https://vsphone.com.br/</string>
    <string name="about_weblate_translation">Ajude a Traduzir &appName;</string>
    <string name="logs_upload_failure">Failed to upload logs!</string>
    <string name="logs_reset_complete">Logs have been cleared</string>
    <string name="logs_url_copied_to_clipboard">Logs URL copied into clipboard</string>
    <string name="about_bugreport_email" translatable="false">vsphone-android@belledonne-communications.com</string>
    <string name="phone_number">Phone number</string>
    <string name="phone_numbers">Phone numbers</string>
    <string name="select_your_country">Select your country</string>
    <string name="international_prefix">Prefix</string>
    <string name="assistant_choose_country">Choose a country</string>
    <string name="assistant_choose_country_title">Country name or prefix</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="domain">Domain</string>
    <string name="sip_address">SIP address</string>
    <string name="sip_addresses">SIP addresses</string>
    <string name="cancel">Cancel</string>
    <plurals name="days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <string name="share_uploaded_logs_link">Share logs link using…</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="transport">Transport</string>
    <string name="transport_udp">UDP</string>
    <string name="transport_tcp">TCP</string>
    <string name="transport_tls">TLS</string>
    <string name="app_description">the <i>libre</i> SIP client</string>
    <string name="status_connected">Connected</string>
    <string name="status_not_connected">Not connected</string>
    <string name="status_in_progress">Connection in progress</string>
    <string name="status_error">Connection failed</string>
    <string name="no_account_configured">No account configured</string>
    <string name="about">About</string>
    <string name="assistant">Assistant</string>
    <string name="recordings">Recordings</string>
    <string name="settings">Settings</string>
    <string name="quit">Quit</string>
    <string name="history_calls_list">Calls</string>
    <string name="no_call_history">No call in your history</string>
    <string name="no_missed_call_history">No missed call in your history</string>
    <string name="no_conference_call_history">No meeting call in your history</string>
    <string name="history_delete_one_dialog">Do you want to delete this record?</string>
    <string name="history_delete_many_dialog">Do you want to delete these records?</string>
    <plurals name="history_delete_dialog" translatable="false">
        <item quantity="one">@string/history_delete_one_dialog</item>
        <item quantity="other">@string/history_delete_many_dialog</item>
    </plurals>
    <string name="contact_invite_friend">Invite</string>
    <string name="no_contact">No contact in your address book.</string>
    <string name="no_sip_contact">No SIP contact in your address book.</string>
    <string name="contact_filter_hint">Search contacts</string>
    <string name="contact_send_sms_invite_text">Hello, join me on &appName;! You can download it for free at %s</string>
    <string name="contact_send_sms_invite_download_link" translatable="false">https://linphone.org/download</string>
    <string name="contact_last_name">Last name</string>
    <string name="contact_first_name">First name</string>
    <string name="contact_organization">Organization</string>
    <string name="contact_choose_existing_or_new_to_add_number">Select a contact or create a new one</string>
    <string name="contact_editor_write_permission_denied">Write Contacts permission denied, can\'t edit contact</string>
    <string name="contact_delete_one_dialog">Do you want to delete this contact?\nIt will also be removed from your device addressbook</string>
    <string name="contact_delete_many_dialog">Are you sure you want to delete these contacts?\nThey will also be removed from your device addressbook</string>
    <plurals name="contact_delete_dialog" translatable="false">
        <item quantity="one">@string/contact_delete_one_dialog</item>
        <item quantity="other">@string/contact_delete_many_dialog</item>
    </plurals>
    <string name="contact_new_choose_sync_account">Choose where to save the contact</string>
    <string name="contact_local_sync_account">Store locally</string>
    <string name="contact_cant_be_deleted">This contact can\'t be deleted</string>
    <string name="contacts_ldap_query_more_results_available">More results are available, refine your search</string>
    <string name="dialer_address_bar_hint">Enter a number or an address</string>
    <string name="debug_popup_title">Debug</string>
    <string name="debug_popup_enable_logs">Enable logs</string>
    <string name="debug_popup_disable_logs">Disable logs</string>
    <string name="debug_popup_send_logs">Send logs</string>
    <string name="debug_popup_show_config_file">View config file</string>
    <string-array name="popup_send_log" translatable="false">
        <item>@string/debug_popup_disable_logs</item>
        <item>@string/debug_popup_send_logs</item>
        <item>@string/debug_popup_show_config_file</item>
        <item>@string/cancel</item>
    </string-array>
    <string-array name="popup_enable_log" translatable="false">
        <item>@string/debug_popup_enable_logs</item>
        <item>@string/debug_popup_show_config_file</item>
        <item>@string/cancel</item>
    </string-array>
    <string name="dialer_transfer_succeded">Call is being transferred</string>
    <string name="dialer_transfer_failed">Can\'t transfer call</string>
    <string name="no_chat_history">No conversations</string>
    <string name="chat_remote_is_composing">Remote is writing&#8230;</string>
    <string name="chat_event_conference_created">You have joined the group</string>
    <string name="chat_event_conference_destroyed">You have left the group</string>
    <string name="chat_event_participant_added">%s has joined</string>
    <string name="chat_event_participant_removed">%s has left</string>
    <string name="chat_event_device_added">new device for %s</string>
    <string name="chat_event_device_removed">device for %s removed</string>
    <string name="chat_event_subject_changed">new subject: %s</string>
    <string name="chat_event_admin_set">%s is admin</string>
    <string name="chat_event_admin_unset">%s is no longer admin</string>
    <string name="chat_security_event_lime_identity_key_changed">LIME identity key changed for %s</string>
    <string name="chat_security_event_man_in_the_middle_detected">Man-in-the-middle attack detected for %s</string>
    <string name="chat_security_event_security_level_downgraded">Security level decreased because of %s</string>
    <string name="chat_security_event_participant_max_count_exceeded">Max participant count exceeded by %s</string>
    <string name="chat_event_ephemeral_disabled">You disabled ephemeral messages</string>
    <string name="chat_event_ephemeral_enabled">You enabled ephemeral messages: %s</string>
    <string name="chat_event_ephemeral_lifetime_changed">Ephemeral messages expiry date: %s</string>
    <string name="chat_message_download_file">Download</string>
    <string name="chat_message_pick_file_dialog">Select source</string>
    <string name="chat_room_devices_fragment_title">Conversation\'s devices</string>
    <string name="chat_room_group_info_title">Info</string>
    <string name="chat_room_group_info_participants">Participants</string>
    <string name="chat_room_group_info_subject_hint">Name the group</string>
    <string name="chat_room_group_info_admin">Admin</string>
    <string name="chat_room_group_info_leave">Leave the group</string>
    <string name="chat_room_group_info_leave_dialog_button">Leave</string>
    <string name="chat_message_context_menu_resend">Resend</string>
    <string name="chat_message_context_menu_copy_text">Copy text</string>
    <string name="chat_message_context_menu_forward">Forward</string>
    <string name="chat_message_context_menu_reply">Reply</string>
    <string name="chat_message_context_menu_imdn_info">Delivery status</string>
    <string name="chat_message_context_menu_delete">Delete</string>
    <string name="chat_message_context_menu_add_to_contacts">Add to contacts</string>
    <string name="chat_room_context_menu_group_info">Group info</string>
    <string name="chat_room_context_menu_participants_devices">Conversation\'s devices</string>
    <string name="chat_room_context_menu_go_to_contact">Go to contact</string>
    <string name="chat_message_context_menu_ephemeral_messages">Ephemeral messages</string>
    <string name="chat_message_context_menu_delete_messages">Delete messages</string>
    <string name="chat_message_context_menu_turn_off_notifications">Disable notifications</string>
    <string name="chat_message_context_menu_turn_on_notifications">Enable notifications</string>
    <string name="conference_schedule_title">Schedule a meeting</string>
    <string name="assistant_create_account">Create account</string>
    <string name="assistant_login_linphone">Use &appName; account</string>
    <string name="assistant_finish">Finish configuration</string>
    <string name="assistant_confirmation_code">Confirmation code</string>
    <string name="assistant_create_account_part_2">We have sent you an SMS with a validation code to your phone number:</string>
    <string name="assistant_create_account_part_3">To complete your phone number verification, please enter the 4 digit code below:\n</string>
    <string name="assistant_link_account">Link account</string>
    <string name="content_description_numpad_1">1</string>
    <string name="content_description_numpad_2">2</string>
    <string name="content_description_numpad_3">3</string>
    <string name="content_description_numpad_4">4</string>
    <string name="content_description_numpad_5">5</string>
    <string name="content_description_numpad_6">6</string>
    <string name="content_description_numpad_7">7</string>
    <string name="content_description_numpad_8">8</string>
    <string name="content_description_numpad_9">9</string>
    <string name="content_description_numpad_0">0</string>
    <string name="content_description_numpad_star">*</string>
    <string name="content_description_numpad_sharp">#</string>
</resources>