<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="keyListener"
            type="com.vsphone.activities.main.dialer.NumpadDigitListener" />
    </data>

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/numpad"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/backgroundColor"
        android:padding="10dp"
        app:alignContent="space_around"
        app:alignItems="center"
        app:flexWrap="wrap"
        app:justifyContent="space_around">

        <ImageView
            style="@style/numpad_digit"
            android:contentDescription="@string/content_description_numpad_1"
            android:onClick="@{() -> keyListener.handleClick('1')}"
            android:onLongClick="@{() -> keyListener.handleLongClick('1')}"
            android:src="@drawable/numpad_one" />

        <ImageView
            style="@style/numpad_digit"
            android:contentDescription="@string/content_description_numpad_2"
            android:onClick="@{() -> keyListener.handleClick('2')}"
            android:src="@drawable/numpad_two" />

        <ImageView
            style="@style/numpad_digit"
            android:contentDescription="@string/content_description_numpad_3"
            android:onClick="@{() -> keyListener.handleClick('3')}"
            android:src="@drawable/numpad_three" />

        <ImageView
            style="@style/numpad_digit"
            android:contentDescription="@string/content_description_numpad_4"
            android:onClick="@{() -> keyListener.handleClick('4')}"
            android:src="@drawable/numpad_four"
            app:layout_wrapBefore="true" />

        <ImageView
            style="@style/numpad_digit"
            android:contentDescription="@string/content_description_numpad_5"
            android:onClick="@{() -> keyListener.handleClick('5')}"
            android:src="@drawable/numpad_five" />

        <ImageView
            style="@style/numpad_digit"
            android:contentDescription="@string/content_description_numpad_6"
            android:onClick="@{() -> keyListener.handleClick('6')}"
            android:src="@drawable/numpad_six" />

        <ImageView
            style="@style/numpad_digit"
            android:contentDescription="@string/content_description_numpad_7"
            android:onClick="@{() -> keyListener.handleClick('7')}"
            android:src="@drawable/numpad_seven"
            app:layout_wrapBefore="true" />

        <ImageView
            style="@style/numpad_digit"
            android:contentDescription="@string/content_description_numpad_8"
            android:onClick="@{() -> keyListener.handleClick('8')}"
            android:src="@drawable/numpad_eight" />

        <ImageView
            style="@style/numpad_digit"
            android:contentDescription="@string/content_description_numpad_9"
            android:onClick="@{() -> keyListener.handleClick('9')}"
            android:src="@drawable/numpad_nine" />

        <ImageView
            style="@style/numpad_digit"
            android:contentDescription="@string/content_description_numpad_star"
            android:onClick="@{() -> keyListener.handleClick('*')}"
            android:src="@drawable/numpad_star_digit"
            app:layout_wrapBefore="true" />

        <ImageView
            style="@style/numpad_digit"
            android:contentDescription="@string/content_description_numpad_0"
            android:onClick="@{() -> keyListener.handleClick('0')}"
            android:onLongClick="@{() -> keyListener.handleLongClick('+')}"
            android:src="@drawable/numpad_zero" />

        <ImageView
            style="@style/numpad_digit"
            android:contentDescription="@string/content_description_numpad_sharp"
            android:onClick="@{() -> keyListener.handleClick('#')}"
            android:src="@drawable/numpad_sharp" />

    </com.google.android.flexbox.FlexboxLayout>

</layout>