<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.vsphone.activities.assistant.viewmodels.PhoneAccountValidationViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/top_bar_fragment"
            android:name="com.vsphone.activities.assistant.fragments.TopBarFragment"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_activity_top_bar_size"
            android:layout_alignParentTop="true"
            tools:layout="@layout/assistant_top_bar_fragment" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/top_bar_fragment"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <TextView
                android:id="@+id/title_account_creation"
                style="@style/standard_text_font"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingTop="10dp"
                android:text="@string/assistant_create_account"
                android:textAllCaps="true"
                android:visibility="@{viewModel.isCreation ? View.VISIBLE : View.GONE, default=gone}" />

            <TextView
                android:id="@+id/title_account_login"
                style="@style/standard_text_font"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingTop="10dp"
                android:text="@string/assistant_login_linphone"
                android:textAllCaps="true"
                android:visibility="@{viewModel.isLogin ? View.VISIBLE : View.GONE}" />

            <TextView
                android:id="@+id/title_account_linking"
                style="@style/standard_text_font"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingTop="10dp"
                android:text="@string/assistant_link_account"
                android:textAllCaps="true"
                android:visibility="@{viewModel.isLinking ? View.VISIBLE : View.GONE, default=gone}" />

            <TextView
                style="@style/standard_small_text_font"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingTop="20dp"
                android:text="@string/assistant_create_account_part_2" />

            <TextView
                style="@style/standard_text_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@{viewModel.phoneNumber}" />

            <TextView
                style="@style/standard_small_text_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingTop="20dp"
                android:text="@string/assistant_create_account_part_3" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/assistant_confirmation_code">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent_color"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:singleLine="true"
                    android:text="@={viewModel.code}" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/button_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/assistant_button"
                android:enabled="@{viewModel.code.length() > 0, default=false}"
                android:onClick="@{() -> viewModel.finish()}"
                android:padding="10dp"
                android:text="@string/assistant_finish"
                android:textColor="@drawable/assistant_button_text_color" />

        </LinearLayout>

        <include
            layout="@layout/wait_layout"
            bind:visibility="@{viewModel.waitForServerAnswer}" />

    </RelativeLayout>

</layout>
